# trinetra

./: .gitignore  ACCURACY_IMPROVEMENT_PLAN.md  ACTION_GROUPING_PROPOSAL.md  ARCHITECTURE.md  BENCHMARK_RESULTS_ANALYSIS.md  BEST_VISION_ENCODER.md  BREAKTHROUGH_RESULTS.md  CURRENT_ARCHITECTURE_STATUS.md  ERROR_PATTERN_ANALYSIS.md  FIXES_VERIFICATION.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_V2.md  INTERNVLM_ROLE_AND_IMPROVEMENTS.md  ISSUES_AND_IMPROVEMENTS.md  OPTIMIZATION_COMPLETE.md  PROJECT_SUMMARY.md  QUICK_TEST_RUNNING.md  README.md  SHARINGAN_LEARNING_ROADMAP.md  STRESS_TEST_README.md  TASK_23.3_IMPLEMENTATION_SUMMARY.md  TASK_23.4_IMPLEMENTATION_SUMMARY.md  TEMPORAL_FIX_SUMMARY.md  TEMPORAL_MODULES_STATUS.md  TESTING_SUMMARY.md  VIDEOMAE_ARCHITECTURE_COMPLETE.md  VISUALIZATION_SUMMARY.md  WHATS_NEW_V2.md  WOODWORKING_TEST_RESULTS.md  analyze_failures.py  check_gpu.py  cooking_video_test_results.md  install_pytorch_gpu.py  old_test_complex_videos.py  pyproject.toml  requirements.txt  run_benchmark_siglip.bat  run_benchmark_with_descriptions.bat  run_benchmark_with_descriptions.sh  run_coin_benchmark.py  (+17 more)
benchmarking/temporalbench/: benchmark_activitynet.py
benchmarking/videomme/: benchmark_long_video_coin.py  readme_videommelongcoin.md  run_coin_benchmark.py  run_coin_benchmark_smolvlm.py  run_coin_benchmark_videomae.py  run_coin_benchmark_videomae_quick.py
benchmarks/: benchmark_multi_scale_tas.py
complex_stress_test_results/: summary.md
complex_stress_test_results/01_tally_ho/: results_20260306_233120.md
complex_stress_test_results/02_bmw_v12/: results_20260306_232812.md  results_20260306_233121.md
complex_stress_test_results/03_blender_tutorial/: results_20260306_233215.md
complex_stress_test_results/05_cooking_marathon/: results_20260307_001236.md
docs/: CUSTOMIZE.md  DEPLOY.md  README.md  architecture-explained.md  architecture-styles.css  architecture.html  benchmarking.html  benchmarking.md  content.md  context_aware_smolvlm_usage.md  cross_modal_verification_usage.md  gradio_ui_configuration.md  gradio_ui_launch.md  index.html  issues-and-fixes.md  multi_scale_tas_implementation.md  parser.js  styles.css  ui_guide.md
docs/images/: README.md
examples/: query_router_demo.py
scripts/: README.md  launch_ui.py
sharingan/: processor.py  processor_videomae.py
sharingan/chat/: __init__.py  llm.py  pipeline.py
tests/: README_INTEGRATION_TESTS.md  README_QUERY_PIPELINE_TESTS.md  run_multi_scale_tas_tests.py  test_context_aware_verification_integration.py  test_ingest_pipeline_integration.py  test_multi_scale_tas_basic.py  test_query_pipeline_integration.py  test_query_router.py
visualizations/: test_pipeline_data.json
(+123 files in other folders)
